<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.ming.cookbook.ui.activity.NewRecipeNameActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/aty_new_recipe_name_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">
        <TextView
            android:id="@+id/aty_new_recipe_name_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/spacing_normal_x"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/fontColorRed"
            android:text="@string/text_cancel"/>
        <TextView
            android:id="@+id/aty_new_recipe_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_large"
            android:textColor="@color/black"
            android:text="@string/text_new_recipe_title"/>
        <TextView
            android:id="@+id/aty_new_recipe_name_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_normal_x"
            android:textSize="@dimen/font_normal"
            android:textColor="@drawable/button_text_color"
            android:enabled="false"
            android:text="@string/text_next"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/aty_new_recipe_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:layout_marginStart="@dimen/spacing_huge"
            android:layout_marginEnd="@dimen/spacing_huge"
            android:gravity="center_horizontal"
            android:hint="@string/text_new_recipe_name_hint"
            android:textColorHint="@color/black_overlay"
            android:textSize="@dimen/font_xxl"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"/>
    </LinearLayout>
</LinearLayout>
