<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacing_normal"
    android:paddingBottom="@dimen/spacing_normal"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/frg_home_intelligent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_intelligent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/fontColorPrimary"
            android:text="@string/frg_home_intelligent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/frg_home_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vegetables"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/fontColorPrimary"
            android:text="@string/frg_home_season"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/frg_home_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rank"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/fontColorPrimary"
            android:text="@string/frg_home_rank"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/frg_home_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/fontColorPrimary"
            android:text="@string/frg_home_register"/>
    </LinearLayout>
</LinearLayout>