<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.ming.cookbook.ui.activity.NewRecipeActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/aty_new_recipe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">
        <TextView
            android:id="@+id/aty_new_recipe_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/spacing_normal_x"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/fontColorRed"
            android:text="@string/text_cancel"/>
        <TextView
            android:id="@+id/aty_new_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_large"
            android:textColor="@color/black"
            android:text="@string/text_new_recipe_title"/>
        <TextView
            android:id="@+id/aty_new_recipe_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_normal_x"
            android:textSize="@dimen/font_normal"
            android:textColor="@drawable/button_text_color"
            android:enabled="false"
            android:text="@string/text_save"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/aty_new_recipe_cover_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_xxxl">
                <ImageView
                    android:id="@+id/aty_new_recipe_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:id="@+id/aty_new_recipe_cover_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/font_large"
                    android:text="@string/text_new_recipe_cover_hint"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_huge"
                android:paddingBottom="@dimen/spacing_huge">
                <EditText
                    android:id="@+id/aty_new_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_xxxl"
                    android:background="@null"/>

            </RelativeLayout>
            <View
                style="@style/pub_line_horizontal"
                android:layout_marginLeft="@dimen/spacing_normal_x"
                android:layout_marginRight="@dimen/spacing_normal_x"/>

            <EditText
                android:id="@+id/aty_new_recipe_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal_x"
                android:layout_marginRight="@dimen/spacing_normal_x"
                android:layout_marginTop="@dimen/spacing_huge"
                android:layout_marginBottom="@dimen/spacing_huge_xxx"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_large"
                android:hint="@string/text_new_recipe_summary_hint"
                android:background="@null"/>
            
            <include layout="@layout/new_recipe_materials_layout"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
